add journey logic
